Enhancement: implement method-level security with @PreAuthorize annotations in controllers, add new permissions for item and category management, and update role permissions accordingly. Also, improve JWT authentication error handling in JwtAuthenticationFilter and RestExceptionHandler.